# controller/index.js
@@ -1,4 +1,5 @@
 const auth = require("./auth");
 const users = require("./users");
+const getCurrency = require("./currency");
 
-module.exports = { auth, users };
+module.exports = { auth, users, getCurrency };
