# swagger.json
@@ -19,6 +19,10 @@
         {
             "name": "Users",
             "description": "Users endpoints"
+        },
+        {
+            "name": "Currency",
+            "description": "Currency endpoints"
         }
     ],
     "paths": {
@@ -170,6 +174,26 @@
                             "application/json": {
                                 "schema": {
                                     "$ref": "#/components/schemas/CurrentUserInvalidToken"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/currency": {
+            "get": {
+                "tags": ["Currency"],
+                "summary": "Get currency",
+                "parameters": [],
+
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/CurrencyResponse"
                                 }
                             }
                         }
@@ -449,6 +473,26 @@
                 }
             },
             "CurrentUserInvalidToken": {
+                "type": "object",
+                "properties": {
+                    "status": {
+                        "type": "string",
+                        "description": "status",
+                        "example": "error"
+                    },
+                    "code": {
+                        "type": "integer",
+                        "description": "status code",
+                        "example": 401
+                    },
+                    "message": {
+                        "type": "string",
+                        "description": "error message",
+                        "example": "jwt expired"
+                    }
+                }
+            },
+            "CurrencyResponse": {
                 "type": "object",
                 "properties": {
                     "status": {
